<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="monster.myapp.moviecatalogue.detail.DetailCatalogueActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@android:color/transparent">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/expandedImageContentDescription"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@color/navy_200" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp">

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veilLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:veilLayout_baseAlpha="0.6"
                app:veilLayout_dropOff="0.5"
                app:veilLayout_highlightAlpha="1.0"
                app:veilLayout_radius="6dp"
                app:veilLayout_shimmerEnable="true"
                app:veilLayout_veiled="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:id="@+id/tv_detail"
                        style="@style/MyTextView"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/tv_item_popularity"
                        android:text="@string/detail_movie"
                        android:textColor="@color/navy_700"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_item_popularity"
                        style="@style/MyTextView"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:gravity="center_vertical"
                        app:drawableStartCompat="@drawable/ic_star"
                        app:drawableTint="@android:color/holo_orange_light"
                        tools:text="4.8" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_detail"
                        android:layout_marginTop="8dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/tv_item_release"
                        style="@style/MyTextView.Item"
                        android:layout_below="@id/line"
                        app:drawableStartCompat="@drawable/ic_date"
                        tools:text="Wednesday, Mei 05, 2021" />

                    <TextView
                        android:id="@+id/tv_item_overview"
                        style="@style/MyTextView.Item"
                        android:layout_below="@id/tv_item_release"
                        tools:text="Washed-up MMA fighter Cole Young, unaware of his heritage, and hunted by Emperor Shang Tsung's best warrior, Sub-Zero, seeks out and trains with Earth's greatest champions as he prepares to stand against the enemies of Outworld in a high stakes battle for the universe." />

                </RelativeLayout>

            </com.skydoves.androidveil.VeilLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/img_poster"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/poster_movie"
        app:backgroundTint="@android:color/transparent"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|right|end"
        app:maxImageSize="84dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>