<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_movie"
        android:enabled="true"
        android:icon="@drawable/ic_movie"
        android:title="@string/title_movie"
        app:showAsAction="withText" />

    <item
        android:enabled="false"
        android:title="@string/txt_favored"
        app:showAsAction="ifRoom"
        android:checkable="false"
        android:checked="false" />

    <item
        android:id="@+id/navigation_tv_show"
        android:enabled="true"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/title_tv_show"
        app:showAsAction="withText" />

</menu>